rerun game, scoreboard, seed